# conflux

./: LICENSE  README.md  USAGE_GUIDE.md  conflux.config.example.yaml  conflux.config.yaml  demo.py  demo_local_embed.py  pyproject.toml
data/: graph.json
data/concepts/: all_concepts.json
data/concepts/0ff42484-71f5-4ac3-a56b-d4c08456d736/: concepts.json
data/concepts/c5d4ae30-19c5-40ad-8c21-ee1a2f8bd5cc/: concepts.json
data/concepts/e446c79c-5d43-43f6-a9f8-92f01304967a/: concepts.json
data/documents/: 0ff42484-71f5-4ac3-a56b-d4c08456d736.json  c5d4ae30-19c5-40ad-8c21-ee1a2f8bd5cc.json  e446c79c-5d43-43f6-a9f8-92f01304967a.json  index.json
data/relations/: relations.json
output/skills/呼吸系统/: 低氧血症知识.yaml  内呼吸知识.yaml  呼吸频率知识.yaml  外呼吸知识.yaml  每分通气量知识.yaml  气体交换知识.yaml  潮气量知识.yaml  环境氧浓度知识.yaml  肺循环知识.yaml  肺水肿知识.yaml  肺活量知识.yaml  血氧饱和度知识.yaml  血红蛋白知识.yaml
output/skills/心血管系统/: 主动脉知识.yaml  冠心病知识.yaml  右心室知识.yaml  右心房知识.yaml  左心室知识.yaml  左心房知识.yaml  心肌知识.yaml  心脏瓣膜疾病知识.yaml  心脏知识.yaml  肺动脉知识.yaml
output/skills/运动生理学/: VO₂max知识.yaml  中等强度运动知识.yaml  医疗监护知识.yaml  外周阻力知识.yaml  心力衰竭知识.yaml  心功能知识.yaml  心率知识.yaml  心肺耐力知识.yaml  心输出量知识.yaml  收缩压知识.yaml  最大心率知识.yaml  最大摄氧量知识.yaml  有氧运动知识.yaml  每搏输出量知识.yaml  肌肉利用氧气的能力知识.yaml  肺部气体交换效率知识.yaml  舒张压知识.yaml  血压知识.yaml  血管弹性知识.yaml  运动后低血压知识.yaml  运动强度知识.yaml  高血压知识.yaml
output/vault/呼吸系统/: 低氧血症.md  内呼吸.md  呼吸频率.md  外呼吸.md  每分通气量.md  气体交换.md  潮气量.md  环境氧浓度.md  肺循环.md  肺水肿.md  肺活量.md  血氧饱和度.md  血红蛋白.md
output/vault/心血管系统/: 主动脉.md  冠心病.md  右心室.md  右心房.md  左心室.md  左心房.md  心肌.md  心脏.md  心脏瓣膜疾病.md  肺动脉.md
output/vault/运动生理学/: 心力衰竭.md  心率.md  心输出量.md  收缩压.md  最大摄氧量.md  有氧运动.md  每搏输出量.md  舒张压.md  血压.md  运动后低血压.md  高血压.md
sources/: 呼吸系统.md  心血管系统.md  运动生理学.md
src/conflux/: __init__.py  config_loader.py
src/conflux/cli/: __init__.py  build_cmd.py  (+5 more)
(+47 files in other folders)
