[project]
name = "conflux"
version = "0.1.0"
description = "A living encyclopedia engine - compile books into AI-ready Skills and human-friendly Knowledge Graphs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Conflux Contributors" }
]
keywords = ["knowledge-graph", "ai", "skill", "obsidian", "conflict-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "litellm>=1.30.0",
    "chromadb>=0.4.0",
    "networkx>=3.2",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "structlog>=23.0.0",
    "tenacity>=8.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
epub = ["ebooklib>=0.18"]
pdf = ["pymupdf>=1.23.0"]
web = ["fastapi>=0.104.0", "uvicorn[standard]>=0.24.0"]
all = ["ebooklib>=0.18", "pymupdf>=1.23.0", "fastapi>=0.104.0", "uvicorn[standard]>=0.24.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
conflux = "conflux.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conflux"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
